test/libyul/yulSyntaxTests/dot_leading_function_arg.yul
{
    function x(.a) {}
}
// ----
// ParserError 2314: (17-18): Expected identifier but got '.'
